Replace getFirst and removeLast